--- a/macos.yml
+++ b/macos.yml
@@ -51,3 +51,16 @@
     - name: Include user-supplied post tasks
       include: "{{ item.path }}"
       with_items: "{{ user_post_tasks.files }}"
+
+    - name: Look for MacOSa install source
+      stat:
+        path: "{{ macosa_install_source }}"
+      register: macosa_install_source_check
+      tags: [ always ]
+
+    - name: Syncing MacOSa install back to install source (if available)
+      synchronize:
+        src: "~/.macosa"
+        dest: "{{ macosa_install_source }}"
+      when: "macosa_install_source_check.stat.exists"
+      tags: [ always ]
