make some updates to install source syncing

--- a/macos.yml
+++ b/macos.yml
@@ -62,5 +62,6 @@
       synchronize:
         src: "~/.macosa"
         dest: "{{ macosa_install_source }}"
+        delete: yes
       when: "macosa_install_source_check.stat.exists"
       tags: [ always ]
