--- a/roles/homebrew/tasks/main.yml
+++ b/roles/homebrew/tasks/main.yml
@@ -1,7 +1,9 @@
 ---
 
 - name: Ensure configured taps are tapped.
-  homebrew_tap: "tap={{ item }} state=present"
+  homebrew_tap:
+    tap="{{ item }}"
+    state=present
   with_items: "{{ homebrew_taps }}"
 
 - name: Update homebrew (if configured)
@@ -9,7 +11,9 @@
   when: homebrew_upgrade or homebrew_update
 
 - name: Ensure configured homebrew packages are installed.
-  homebrew: "name={{ item }} state=present"
+  homebrew:
+    name="{{ item }}"
+    state=present
   with_items: "{{ homebrew_packages }}"
 
 - name: Upgrade all homebrew packages (if configured).
@@ -26,4 +30,4 @@
   command: >
     brew cask install {{ item }} --appdir={{ homebrew_cask_appdir }}
   with_items: "{{ homebrew_cask_apps }}"
-  when: "'{{ item }}' not in cask_installed_apps.stdout"
+  when: "item not in cask_installed_apps.stdout"
