fixes for deprecation warnings for brackets in when statements, some stabs at fixing rvm, setting use/default ruby in Ansible

--- a/roles/browsers/tasks/main.yml
+++ b/roles/browsers/tasks/main.yml
@@ -7,4 +7,4 @@
 
 - name: Set default browser
   shell: "{{ playbook_dir }}/bin/defaultbrowser -set {{ default_browser }}"
-  when: "'Current: {{ default_browser }}' not in '{{ current_default_browser.stdout }}'"
+  when: "default_browser not in current_default_browser.stdout"
