--- a/roles/system/tasks/dock.yml
+++ b/roles/system/tasks/dock.yml
@@ -11,7 +11,7 @@
 
 - name: Check to see if current state of dock application/files count is up-to-date
   command: echo true
-  changed_when: "{{ item.stdout | regex_replace('\\s', '') | int }} != {{ dock[('applications' if item.item == 'persistent-apps' else 'files')] | length }}"
+  changed_when: "(item.stdout | regex_replace('\\s', '') | int) != (dock[('applications' if item.item == 'persistent-apps' else 'files')] | length)"
   register: current_dock_count_check
   with_items: "{{ current_dock_count.results }}"
 
@@ -21,7 +21,7 @@
       echo "Dock Configuration Changed"
     fi
   register: dock_applications_check
-  when: "not {{ current_dock_count_check.changed }}"
+  when: "not current_dock_count_check.changed"
   changed_when: "'Dock Configuration Changed' in dock_applications_check.stdout"
   with_indexed_items: "{{ dock.applications }}"
 
@@ -35,14 +35,14 @@
       echo "Dock Configuration Changed"
     fi
   register: dock_files_check
-  when: "not {{ current_dock_count_check.changed }}"
+  when: "not current_dock_count_check.changed"
   changed_when: "'Dock Configuration Changed' in dock_files_check.stdout"
   with_indexed_items: "{{ dock.files }}"
 
 - name: Remove all dock applications/files
   command: >
     /usr/libexec/PlistBuddy -c "Delete {{ item }}" ~/Library/Preferences/com.apple.dock.plist
-  when: "{{ current_dock_count_check.changed }} or {{ dock_applications_check.changed }} or {{ dock_files_check.changed }}"
+  when: "current_dock_count_check.changed or dock_applications_check.changed or dock_files_check.changed"
   with_items:
     - "persistent-apps"
     - "persistent-others"
@@ -50,7 +50,7 @@
 - name: Set dock applications
   command: >
     defaults write com.apple.dock persistent-apps -array-add "<dict><key>tile-data</key><dict><key>file-data</key><dict><key>_CFURLString</key><string>{{ item }}</string><key>_CFURLStringType</key><integer>0</integer></dict></dict></dict>"
-  when: "{{ current_dock_count_check.changed }} or {{ dock_applications_check.changed }} or {{ dock_files_check.changed }}"
+  when: "current_dock_count_check.changed or dock_applications_check.changed or dock_files_check.changed"
   with_items: "{{ dock['applications'] }}"
   notify:
     - restart dock
@@ -58,7 +58,7 @@
 - name: Set dock files
   command: >
     defaults write com.apple.dock persistent-others -array-add "<dict><key>tile-data</key><dict><key>arrangement</key><integer>{{ item.arrangement | default(1) }}</integer><key>showas</key><integer>{{ item.showas | default(0) }}</integer><key>file-data</key><dict><key>_CFURLString</key><string>{{ item.path }}</string><key>_CFURLStringType</key><integer>0</integer></dict></dict><key>tile-type</key><string>directory-tile</string></dict>"
-  when: "{{ current_dock_count_check.changed }} or {{ dock_applications_check.changed }} or {{ dock_files_check.changed }}"
+  when: "current_dock_count_check.changed or dock_applications_check.changed or dock_files_check.changed"
   with_items: "{{ dock['files'] }}"
   notify:
     - restart dock
