--- a/roles/ruby/tasks/main.yml
+++ b/roles/ruby/tasks/main.yml
@@ -17,24 +17,30 @@
     insertafter: EOF
     line: "{{ item }}"
   with_items:
-    - '[[ -s "$HOME/.rvm/scripts/rvm" ]] && source "$HOME/.rvm/scripts/rvm"'
+    - '[[ -s "$HOME/.rvm/scripts/rvm" ]] && source "$HOME/.rvm/scripts/rvm" # Load RVM into a shell session *as a function*'
     - 'export PATH="$PATH:$HOME/.rvm/bin"'
+  register: rvm_profile_lines
+
+- name: Re-source bash_profile
+  shell: >
+    . /Users/{{ ansible_user_id }}/.bash_profile
+  when: rvm_profile_lines.changed
 
 - name: Get list of standard known rubies
   shell: >
-    source "$HOME/.rvm/scripts/rvm"; rvm ls known strings | grep -E "^ruby-[0-9]"
+    rvm ls known strings | grep -E "^ruby-[0-9]"
   register: rvm_known_rubies
   changed_when: false
 
 - name: Get list of installed rubies
   shell: >
-    source "$HOME/.rvm/scripts/rvm"; rvm ls rubies strings
+    rvm ls rubies strings
   register: rvm_installed_rubies
   changed_when: false
 
 - name: Get current default ruby version
   shell: >
-    source "$HOME/.rvm/scripts/rvm"; rvm current
+    rvm current
   register: rvm_current_default_ruby
   changed_when: false
 
@@ -43,15 +49,16 @@
 
 - name: Install ruby versions
   shell: >
-    source "$HOME/.rvm/scripts/rvm"; rvm install {{ stable_ruby_version if item == 'stable' else (item | regex_replace('^([0-9].*)', 'ruby-\1')) }}
+    rvm install {{ stable_ruby_version if item == 'stable' else (item | regex_replace('^([0-9].*)', 'ruby-\1')) }}
   register: rvm_ruby_install
   with_items: "{{ ruby_versions }}"
-  when: "('{{ stable_ruby_version if item == 'stable' else (item | regex_replace('^([0-9].*)', 'ruby-\\1')) }}' not in rvm_installed_rubies.stdout_lines)"
+  when: "((stable_ruby_version if item == 'stable' else (item | regex_replace('^([0-9].*)', 'ruby-\\1'))) not in rvm_installed_rubies.stdout_lines)"
 
 - set_fact:
     use_ruby_version: "{{ stable_ruby_version if ruby_default_version == 'stable' else (ruby_default_version | regex_replace('^([0-9].*)', 'ruby-\\1')) }}"
 
-- name: Set default rvm ruby
+# TODO: this isn't working, something about rvm and environment
+- name: Set default ruby
   shell: >
-    source "$HOME/.rvm/scripts/rvm"; rvm --default use {{ use_ruby_version }}
+    rvm use --default {{ use_ruby_version }}
   when: "(use_ruby_version != None) and (use_ruby_version != rvm_current_default_ruby.stdout)"
