--- a/roles/aws/tasks/main.yml
+++ b/roles/aws/tasks/main.yml
@@ -17,47 +17,55 @@
     dest: "~/.aws/config"
     create: yes
     mode: 0600
-    section: "{{ 'profile %s' % item.0.name if (item.0.name != 'default') else item.0.name }}"
-    option: "{{ item.1.name }}"
-    value: "{{ item.1.value }}"
+    section: "{{ 'profile %s' % profile.0.name if (profile.0.name != 'default') else profile.0.name }}"
+    option: "{{ profile.1.name }}"
+    value: "{{ profile.1.value }}"
     state: "{{ 'present' if aws_cli_profiles_active else 'absent' }}"
   when: aws_cli_profiles_active
   with_subelements:
     - "{{ aws_cli_profiles }}"
     - "config"
+  loop_control:
+    loop_var: profile
 
 - name: Set aws cli credentials
   ini_file:
     dest: "~/.aws/credentials"
     create: yes
     mode: 0600
-    section: "{{ item.0.name }}"
-    option: "{{ item.1.name }}"
-    value: "{{ item.1.value }}"
+    section: "{{ profile.0.name }}"
+    option: "{{ profile.1.name }}"
+    value: "{{ profile.1.value }}"
     state: "{{ 'present' if aws_cli_profiles_active else 'absent' }}"
   when: aws_cli_profiles_active
   with_subelements:
     - "{{ aws_cli_profiles }}"
     - "credentials"
+  loop_control:
+    loop_var: profile
 
 - name: Remove aws cli config if set to inactive
   ini_file:
     dest: "~/.aws/config"
     create: yes
     mode: 0600
-    section: "{{ 'profile %s' % item.name if (item.name != 'default') else item.0.name }}"
+    section: "{{ 'profile %s' % profile.name if (profile.name != 'default') else profile.0.name }}"
     state: absent
   when: not aws_cli_profiles_active
   with_items:
     - "{{ aws_cli_profiles }}"
+  loop_control:
+    loop_var: profile
 
 - name: Remove aws cli credentials if set to inactive
   ini_file:
     dest: "~/.aws/credentials"
     create: yes
     mode: 0600
-    section: "{{ item.name }}"
+    section: "{{ profile.name }}"
     state: absent
   when: not aws_cli_profiles_active
   with_items:
     - "{{ aws_cli_profiles }}"
+  loop_control:
+    loop_var: profile
