--- a/roles/node/tasks/main.yml
+++ b/roles/node/tasks/main.yml
@@ -26,6 +26,7 @@
   shell: >
     source ~/.nvm/nvm.sh; nvm ls stable | tr -d '[:cntrl:]'
   register: nvm_stable_version
+  when: nvm_install
   changed_when: false
 
 - set_fact:
@@ -36,6 +37,7 @@
     source ~/.nvm/nvm.sh; nvm ls | grep -E "(\->)?\s+(v)?{{ (nvm_stable_version_stripped if item == 'stable' else item) }}" | cat
   register: nvm_node_versions_check
   with_items: "{{ node_versions }}"
+  when: nvm_install
   changed_when: false
 
 - name: Install node versions
@@ -43,16 +45,17 @@
     source ~/.nvm/nvm.sh; nvm install {{ item.item }}
   register: nvm_node_install
   with_items: "{{ nvm_node_versions_check.results }}"
-  when: "item.stdout == ''"
+  when: "nvm_install and (item.stdout == '')"
 
 - name: Get current node version being used
   shell: >
     source ~/.nvm/nvm.sh; nvm current
   changed_when: false
   register: nvm_current_node_version
+  when: nvm_install
 
 # TODO: nvm use <version> does not work in updating the current session running this provisioning, so we're just leaving it out, accepting that the next terminal session opened will use the new default
 - name: Set default node version
   shell: >
     source ~/.nvm/nvm.sh; nvm alias default {{ node_default_version }}
-  when: "(node_default_version != None) and (nvm_current_node_version.stdout != (nvm_stable_version_stripped if node_default_version == 'stable' else (node_default_version | regex_replace('^([0-9].*)', 'v\\1'))))"
+  when: "nvm_install and (node_default_version != None) and (nvm_current_node_version.stdout != (nvm_stable_version_stripped if node_default_version == 'stable' else (node_default_version | regex_replace('^([0-9].*)', 'v\\1'))))"
