make sure we handle pyenv bash_profile item based on pyenv_install value

--- a/roles/python/tasks/main.yml
+++ b/roles/python/tasks/main.yml
@@ -11,6 +11,16 @@
     dest: ~/.bash_profile
     insertbefore: '^.*\.rvm/scripts/rvm.*'
     line: 'eval "$(pyenv init -)"'
+    state: present
+  when: pyenv_install
+
+- name: Ensure pyenv .bash_profile line is not present
+  lineinfile:
+    dest: ~/.bash_profile
+    insertbefore: '^.*\.rvm/scripts/rvm.*'
+    line: 'eval "$(pyenv init -)"'
+    state: absent
+  when: not pyenv_install
 
 - name: Install Python Packages
   pip:
