add Safari to the dock by default

--- a/roles/system/defaults/main.yml
+++ b/roles/system/defaults/main.yml
@@ -20,6 +20,7 @@ dock:
     - "/Applications/App Store.app"
     - "/Applications/Launchpad.app"
     - "/Applications/Messages.app"
+    - "/Applications/Safari.app"
     - "/Applications/iTunes.app"
     - "/Applications/System Preferences.app"
   files:
