--- a/roles/node/tasks/main.yml
+++ b/roles/node/tasks/main.yml
@@ -60,3 +60,8 @@
   shell: >
     source ~/.nvm/nvm.sh; nvm alias default {{ node_default_version }}
   when: "nvm_install and (node_default_version != None) and (nvm_current_node_version.stdout != (nvm_stable_version_stripped if node_default_version == 'stable' else (node_default_version | regex_replace('^([0-9].*)', 'v\\1'))))"
+
+- name: Ensure configured npm packages are installed globally
+  shell: >
+    source ~/.nvm/nvm.sh; npm install -g {{ item }}
+  with_items: node_npm_global_packages
