--- a/roles/ruby/tasks/main.yml
+++ b/roles/ruby/tasks/main.yml
@@ -2,45 +2,40 @@
 
 - name: Check to see if rvm is installed
   stat:
-    path: "~/.rvm"
+    path: "/Users/{{ ansible_user_id }}/.rvm"
   register: rvm_path
   changed_when: false
 
 - name: Install rvm
   shell: >
-    \curl -sSL https://get.rvm.io | bash -s stable --ruby
+    \curl -sSL https://get.rvm.io | bash -s stable --ruby --ignore-dotfiles
   when: "rvm_install and ((rvm_path.stat.isdir is not defined) or (not rvm_path.stat.isdir))"
+  register: rvm_install_exec
 
-- name: Ensure rvm initialization lines are present in .bash_profile
+- name: Ensure .rvm_profile exists with rvm sourcing
   lineinfile:
-    dest: ~/.bash_profile
-    insertafter: EOF
-    line: "{{ item }}"
-  with_items:
-    - '[[ -s "$HOME/.rvm/scripts/rvm" ]] && source "$HOME/.rvm/scripts/rvm" # Load RVM into a shell session *as a function*'
-    - 'export PATH="$PATH:$HOME/.rvm/bin"'
-  register: rvm_profile_lines
+    dest: "/Users/{{ ansible_user_id }}/.rvm_profile"
+    create: yes
+    line: '[[ -s "$HOME/.rvm/scripts/rvm" ]] && . "$HOME/.rvm/scripts/rvm"'
 
-- name: Re-source bash_profile
-  shell: >
-    . /Users/{{ ansible_user_id }}/.bash_profile
-  when: rvm_profile_lines.changed
+- include_tasks: profile-sourcing.yml
+  when: ruby_maintain_profile_sourcing
 
 - name: Get list of standard known rubies
   shell: >
-    rvm ls known strings | grep -E "^ruby-[0-9]"
+    . /Users/{{ ansible_user_id }}/.rvm/scripts/rvm && rvm ls known strings | grep -E "^ruby-[0-9]"
   register: rvm_known_rubies
   changed_when: false
 
 - name: Get list of installed rubies
   shell: >
-    rvm ls rubies strings
+    . /Users/{{ ansible_user_id }}/.rvm/scripts/rvm && rvm ls rubies strings
   register: rvm_installed_rubies
   changed_when: false
 
 - name: Get current default ruby version
   shell: >
-    rvm current
+    . /Users/{{ ansible_user_id }}/.rvm/scripts/rvm && rvm current
   register: rvm_current_default_ruby
   changed_when: false
 
@@ -49,7 +44,7 @@
 
 - name: Install ruby versions
   shell: >
-    rvm install {{ stable_ruby_version if item == 'stable' else (item | regex_replace('^([0-9].*)', 'ruby-\1')) }}
+    . /Users/{{ ansible_user_id }}/.rvm/scripts/rvm && rvm install {{ stable_ruby_version if item == 'stable' else (item | regex_replace('^([0-9].*)', 'ruby-\1')) }}
   register: rvm_ruby_install
   with_items: "{{ ruby_versions }}"
   when: "((stable_ruby_version if item == 'stable' else (item | regex_replace('^([0-9].*)', 'ruby-\\1'))) not in rvm_installed_rubies.stdout_lines)"
@@ -57,8 +52,8 @@
 - set_fact:
     use_ruby_version: "{{ stable_ruby_version if ruby_default_version == 'stable' else (ruby_default_version | regex_replace('^([0-9].*)', 'ruby-\\1')) }}"
 
-# TODO: this isn't working, something about rvm and environment
+# NOTE: maybe TODO, the use part of this doesn't actually work for the current session running this, requires opening a new terminal window
 - name: Set default ruby
   shell: >
-    rvm use --default {{ use_ruby_version }}
+    . /Users/{{ ansible_user_id }}/.rvm/scripts/rvm && rvm use {{ use_ruby_version }} --default
   when: "(use_ruby_version != None) and (use_ruby_version != rvm_current_default_ruby.stdout)"
