--- a/roles/homebrew/tasks/main.yml
+++ b/roles/homebrew/tasks/main.yml
@@ -20,9 +20,14 @@
   homebrew: upgrade_all=yes
   when: homebrew_upgrade
 
+- name: "Refresh sudo cache"
+  command: "echo none"
+  become: yes
+  changed_when: false
+
 - name: Get list of apps installed with cask.
   shell: >
-    echo $(cat {{ playbook_dir }}/.vaultpass) | sudo -S brew cask list
+    brew cask list
   register: cask_installed_apps
   changed_when: false
   args:
@@ -30,7 +35,7 @@
 
 - name: Install configured cask applications.
   shell: >
-    echo $(cat {{ playbook_dir }}/.vaultpass) | sudo -S brew cask install {{ item }} --appdir={{ homebrew_cask_appdir }}
+    brew cask install {{ item }} --appdir={{ homebrew_cask_appdir }}
   with_items: "{{ homebrew_cask_apps }}"
   when: "item not in cask_installed_apps.stdout"
   args:
