--- a/roles/system/tasks/main.yml
+++ b/roles/system/tasks/main.yml
@@ -1,5 +1,14 @@
 ---
 
+- name: Get the serial number of the computer
+  shell: >
+    ioreg -c IOPlatformExpertDevice -d 2 | awk -F\" '/IOPlatformSerialNumber/{print $(NF-1)}'
+  register: serial_number
+  changed_when: false
+
+- set_fact:
+    _computer_name: "{{ computer_name|replace('{serial_number}', serial_number.stdout) }}"
+
 - name: Check the computer name
   command: systemsetup -getcomputername
   become: yes
@@ -8,10 +17,25 @@
   register: current_computer_name
 
 - name: Set the computer name
-  command: "systemsetup -setcomputername {{ computer_name }}"
+  shell: >
+    systemsetup -setcomputername {{ _computer_name }}
   become: yes
   become_method: sudo
-  when: "computer_name not in current_computer_name.stdout"
+  when: "_computer_name not in current_computer_name.stdout"
+
+- name: Check the computer hostname
+  command: hostname
+  become: yes
+  become_method: sudo
+  changed_when: false
+  register: current_computer_hostname
+
+- name: Set the computer hostname
+  shell: >
+    scutil --set HostName {{ _computer_name }}
+  become: yes
+  become_method: sudo
+  when: "_computer_name not in current_computer_hostname.stdout"
 
 - name: Check current power management settings
   shell: "pmset -a -g | grep -E \"^(\\s){{ item.key }}(\\s+)([0-9]+)(.*?)$\" | grep -oE \"[0-9]+\""
