pipe to cat to prevent failure

--- a/roles/docker-for-mac/tasks/main.yml
+++ b/roles/docker-for-mac/tasks/main.yml
@@ -2,7 +2,7 @@
 
 - name: Check for existing Docker for Mac install
   shell: >
-    brew cask list | grep ^docker$
+    brew cask list | grep ^docker$ | cat
   register: docker_for_mac_install
   changed_when: false
   args:
