--- a/roles/xenv/defaults/main.yml
+++ b/roles/xenv/defaults/main.yml
@@ -1,25 +1,25 @@
 ---
 
 ruby_manage: yes
-ruby_default_version: stable
+ruby_default_version: latest
 ruby_versions:
-  - stable
+  - latest
 ruby_packages: []
 
 python_manage: yes
-python_default_version: stable
+python_default_version: latest
 python_versions:
-  - stable
+  - latest
 python_packages: []
 
 node_manage: yes
-node_default_version: stable
+node_default_version: latest
 node_versions:
-  - stable
+  - latest
 node_packages: []
 
 go_manage: yes
-go_default_version: stable
+go_default_version: latest
 go_versions:
-  - stable
+  - latest
 go_packages: []
